--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                             <h5>Calças masculinas</h5>
                             <p>Aperte na imagem para ver mais opções</p>
                             <p>R$ 45.00</p>
-                            <button class="btn btn-buy">Comprar agora</button>
+                            <a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+
                         </div>
                     </div>
                 </div>
@@ -72,7 +73,8 @@
                             <h5>Roupa 2</h5>
                             <p>Descrição da roupa 2</p>
                             <p>R$ 129,99</p>
-                            <button class="btn btn-buy">Comprar</button>
+                            <a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+
                         </div>
                     </div>
                 </div>
@@ -87,7 +89,8 @@
                             <h5>Roupa 3</h5>
                             <p>Descrição da roupa 3</p>
                             <p>R$ 79,99</p>
-                            <button class="btn btn-buy">Comprar</button>
+<a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+
                         </div>
                     </div>
                 </div>
