--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <h5>Calças masculinas</h5>
                             <p>Aperte na imagem para ver mais opções</p>
                             <p>R$ 45.00</p>
-                            <a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+                            <a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
 
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <h5>Roupa 2</h5>
                             <p>Descrição da roupa 2</p>
                             <p>R$ 129,99</p>
-                            <a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+                            <a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
 
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                             <h5>Roupa 3</h5>
                             <p>Descrição da roupa 3</p>
                             <p>R$ 79,99</p>
-<a href="pagina_de_checkout_ou_detalhes.html" class="btn btn-buy">Comprar agora</a>
+<a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
 
                         </div>
                     </div>
