--- a/finalizar.html
+++ b/finalizar.html
@@ -74,7 +74,12 @@
             </div>
             <div class="form-group">
                 <label for="color">Cor do Produto:</label>
-                <input type="text" class="form-control" id="color" required>
+                <select class="form-control" id="color" required>
+                    <option value="">Escolha uma cor</option>
+                    <option value="Branco">Branco</option>
+                    <option value="Bege">Bege</option>
+                    <option value="Preto">Preto</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="quantity">Quantidade:</label>
@@ -112,7 +117,7 @@
             const contact = document.getElementById('contact').value;
             const email = document.getElementById('email').value;
             const size = document.getElementById('size').value;
-            const color = document.getElementById('color').value;
+            const color = document.getElementById('color').value; // Captura a cor selecionada
             const quantity = document.getElementById('quantity').value;
             const totalPrice = document.getElementById('totalPrice').innerText;
 
