--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
     <div class="header">
-        <img src="sua-logo.png" alt="Logo" class="logo"> <!-- Substitua "sua-logo.png" pelo caminho da sua logo -->
+        <img src="https://images.vexels.com/media/users/3/203887/isolated/preview/761e922b60c0a52f3ee344150233ed0a-moda-masculina-em-pe-com-as-maos-no-bolso.png?w=360" alt="Logo" class="logo"> <!-- Substitua "sua-logo.png" pelo caminho da sua logo -->
         <h1 class="catalog-title">Catálogo de Roupas</h1>
     </div>
 
