--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         .item-details p {
             color: #6c757d;
         }
+        .logo {
+    height: 100px; /* Aumente o valor para aumentar o tamanho da logo */
+    margin-right: 20px; /* Espaçamento à direita da logo */
+}
+
         .btn-buy {
             background-color: #6f42c1; /* Roxo */
             color: white;
