--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: #f8f9fa; /* Cor de fundo suave */
+        }
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: black; /* Cor do cabeçalho */
+            padding: 20px;
+        }
+        .logo {
+            height: 100px; /* Aumente o valor para aumentar o tamanho da logo */
+            margin-right: 20px; /* Espaçamento à direita da logo */
+        }
         .catalog-title {
             text-align: center;
             margin-top: 20px;
             font-size: 2em;
             font-weight: bold;
-            color: #343a40;
+            color: gray;
         }
         .catalog-item {
             margin-bottom: 30px;
@@ -33,44 +47,25 @@
         .item-details p {
             color: #6c757d;
         }
-        .logo {
-    height: 200px; /* Aumente o valor para aumentar o tamanho da logo */
-    margin-right: 20px; /* Espaçamento à direita da logo */
-}
-
         .btn-buy {
-            background-color: #6f42c1; /* Roxo */
+            background-color: #6f42c1; /* Cor roxa */
             color: white;
             border: none;
-            border-radius: 25px; /* Bordas arredondadas */
-            padding: 10px 20px; /* Espaçamento interno */
-            transition: background-color 0.3s, transform 0.2s; /* Transição suave */
         }
         .btn-buy:hover {
-            background-color: #563d7c; /* Roxo mais escuro */
-            transform: translateY(-2px); /* Levanta o botão um pouco */
-        }
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            background-color: #f8f9fa; /* Fundo claro para o cabeçalho */
-        }
-        .logo {
-            height: 50px; /* Altura da logo */
-            margin-right: 20px; /* Espaçamento à direita da logo */
+            background-color: #5a329e; /* Tom mais escuro de roxo no hover */
         }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <img src="https://images.vexels.com/media/users/3/203887/isolated/preview/761e922b60c0a52f3ee344150233ed0a-moda-masculina-em-pe-com-as-maos-no-bolso.png?w=360" alt="Logo" class="logo"> <!-- Substitua "sua-logo.png" pelo caminho da sua logo -->
-        <h1 class="catalog-title">Catálogo de Roupas</h1>
+        <img src="logo.png" alt="Logo" class="logo"> <!-- Altere 'sua_logo.png' para o caminho da sua logo -->
+        <h1 class="text-white">Catálogo de Roupas</h1>
     </div>
 
     <div class="container">
+        <h1 class="catalog-title">Faça já seu pedido</h1>
         <div class="row">
             <!-- Primeiro Item -->
             <div class="col-md-4 catalog-item">
@@ -230,9 +225,9 @@
         </div>
     </div>
 
-    <!-- jQuery e Bootstrap JS -->
+    <!-- jQuery, Popper.js e Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
