--- a/index.html
+++ b/index.html
@@ -85,36 +85,21 @@
             <!-- Segundo Item -->
             <div class="col-md-4 catalog-item">
                 <div class="card">
-                    <img src="preto e bege.jpg" class="card-img-top" alt="Roupa 2" data-toggle="modal" data-target="#modalRoupa2">
+                    <img src="camisa preta.png" class="card-img-top" alt="Camisas masculinas" data-toggle="modal" data-target="#modalRoupa2">
                     <div class="card-body">
                         <div class="item-details">
-                            <h5>Roupa 2</h5>
-                            <p>Descrição da roupa 2</p>
-                            <p>R$ 129,99</p>
+                            <h5>Camisas masculinas</h5>
+                            <p>Aperta na imagem para ver mais opções</p>
+                            <p>R$ 37.00</p>
                             <a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Terceiro Item -->
-            <div class="col-md-4 catalog-item">
-                <div class="card">
-                    <img src="preto e bege.jpg" class="card-img-top" alt="Roupa 3" data-toggle="modal" data-target="#modalRoupa3">
-                    <div class="card-body">
-                        <div class="item-details">
-                            <h5>Roupa 3</h5>
-                            <p>Descrição da roupa 3</p>
-                            <p>R$ 79,99</p>
-                            <a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal Roupa 1 -->
+            
+       
+   <!-- Modal Roupa 1 -->
     <div class="modal fade" id="modalRoupa1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -156,7 +141,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Roupa 2</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Camisas masculinas</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -165,13 +150,13 @@
                     <div id="carouselRoupa2" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="preto e bege.jpg" class="d-block w-100" alt="Roupa 2 - Imagem 1">
+                                <img src="camisa preta.png" class="d-block w-100" alt="Camisas masculinas - Imagem 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="bege.jpg" class="d-block w-100" alt="Roupa 2 - Imagem 2">
+                                <img src="camisa branca.png" class="d-block w-100" alt="Camisas masculinas - Imagem 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="descricao.jpg" class="d-block w-100" alt="Roupa 2 - Imagem 3">
+                                <img src="camisa vermelho.png" class="d-block w-100" alt="Camisas masculinas - Imagem 3">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselRoupa2" role="button" data-slide="prev">
