--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h5>Camisas masculinas</h5>
                             <p>Aperta na imagem para ver mais opções</p>
                             <p>R$ 37.00</p>
-                            <a href="finalizar.html" class="btn btn-buy">Comprar agora</a>
+                            <a href="sacola-camisas.html" class="btn btn-buy">Comprar agora</a>
                         </div>
                     </div>
                 </div>
